--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!--
 Author: 旋風 Desinger
-Edited by Vy Nghia
+Edited by Huu Dat
 © 2017 BA Script. Power by Amonika.
 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
